RESOLVED FIXED 232227
[GTK][a11y] Set platform name to atspi in WTR
https://bugs.webkit.org/show_bug.cgi?id=232227
Summary [GTK][a11y] Set platform name to atspi in WTR
Carlos Garcia Campos
Reported 2021-10-25 02:03:28 PDT
We are using atk platform name by the tests and helper scripts because the expected behavior should be the same for atspi. Once bug #230253 is fixed we can use atspi instead.
Attachments
Patch (123.45 KB, patch)
2022-02-02 04:39 PST, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2022-02-02 04:39:01 PST
Carlos Garcia Campos
Comment 2 2022-02-02 22:36:19 PST
Note You need to log in before you can comment on or make changes to this bug.