[GTK][a11y] Set platform name to atspi in WTR https://bugs.webkit.org/show_bug.cgi?id=232227

Reviewed by Adrian Perez de Castro.

Tools:

* WebKitTestRunner/InjectedBundle/atspi/AccessibilityControllerAtspi.cpp:
(WTR::AccessibilityController::platformName): Use atspi instead of atk.

LayoutTests:

Update tests to use atspi instead of atk.

* accessibility/add-children-pseudo-element.html:
* accessibility/aria-hidden-false-works-in-subtrees.html:
* accessibility/aria-label-on-label-element.html:
* accessibility/aria-option-role.html:
* accessibility/auto-fill-crash.html:
* accessibility/combo-box-collapsed-selection-changed.html:
* accessibility/content-editable-as-textarea.html:
* accessibility/focusable-inside-hidden.html:
* accessibility/form-control-value-settable.html:
* accessibility/gtk/caret-offsets-and-extraneous-white-spaces.html:
* accessibility/gtk/caret-offsets.html:
* accessibility/gtk/resources/atk-helpers.js: Removed.
* accessibility/gtk/text-in-span-block-in-a-block.html:
* accessibility/ignore-spacer-elements.html:
* accessibility/insert-children-assert.html:
* accessibility/list-detection.html:
* accessibility/menu-list-sends-change-notification.html:
* accessibility/radio-button-title-label.html:
* accessibility/render-counter-text.html:
* accessibility/roles-computedRoleString.html:
* accessibility/roles-exposed.html:
* accessibility/secure-textfield-title-ui.html:
* accessibility/select-element-at-index.html:
* accessibility/svg-bounds.html:
* accessibility/table-column-headers-with-captions.html:
* accessibility/table-fallback-roles-expose-element-attributes.html:
* accessibility/table-with-footer-section-above-body.html:
* platform/glib/accessibility/platform-name-expected.txt:
* resources/accessibility-helper.js:
(platformValueForW3CName):
(platformValueForW3CDescription):
(platformRoleForComboBox):
(platformRoleForStaticText):
(spinnerForTextInput):


Canonical link: https://commits.webkit.org/246736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289028 268f45cc-cd09-0410-ab3c-d52691b4dbfc